--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.DetailActivity"></activity>
+        <activity android:name=".view.DetailsActivity"></activity>
         <activity android:name=".view.SearchActivity" />
         <activity android:name=".view.SplashActivity">
             <intent-filter>
